--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,7 @@ chromadb==0.4.22
 # Embeddings
 langchain-huggingface==0.0.1
 sentence-transformers==2.3.1
+
+# Compute - haha
+numpy==1.26.4
+scikit-learn==1.4.2
